--- a/requirements.txt
+++ b/requirements.txt
@@ -40,9 +40,7 @@ django-role-permissions==3.2.0
 django-widget-tweaks==1.5.0
 django_notifications==0.1.dev0
 djangorestframework==3.15.2
-
 et_xmlfile==2.0.0
-
 fastapi==0.115.12
 Flask==2.0.1
 fonttools==4.56.0
@@ -70,15 +68,14 @@ MarkupSafe==3.0.2
 matplotlib==3.10.1
 msgpack==1.1.0
 numpy==2.2.2
-opencv-python==4.11.0.86
+opencv-python-headless==4.11.0.86   # build headless
 openpyxl==3.1.5
 oscrypto==1.3.0
 outcome==1.3.0.post0
 packaging==24.2
 pandas==2.2.3
-pillow==10.4.0
+Pillow==10.4.0
 prompt_toolkit==3.0.50
-
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
@@ -102,7 +99,7 @@ python-dotenv==0.19.0
 pytz==2025.1
 PyYAML==6.0.2
 pyzbar==0.1.9
-qrcode==8.0
+qrcode[pil]==8.0
 redis==5.2.1
 reportlab==4.0.4
 requests==2.32.3
@@ -144,8 +141,3 @@ xhtml2pdf==0.2.17
 xmltodict==0.14.2
 zope.interface==7.2
 zopfli==0.2.3.post1
-# Dependências para scanner de câmera
-opencv-python-headless==4.8.1.78
-pyzbar==0.1.9
-qrcode[pil]==7.4.2
-Pillow==10.0.1
